y.output
Grammar

    0 $accept: program $end

    1 program: statement NEWLINE program
    2        | statement
    3        | NEWLINE program
    4        | %empty

    5 statement: declaration
    6          | assignment
    7          | write
    8          | HALT

    9 declaration: VAR ID COLON TYPE

   10 assignment: ID ASSIGNMENT expression

   11 write: WRITE expression
   12      | WRITE STRING
   13      | WRITELN expression
   14      | WRITELN STRING
   15      | WRITELN

   16 expression: expression ADD expression
   17           | expression SUB expression
   18           | expression MUL expression
   19           | expression DIV expression
   20           | SUB expression
   21           | ROUND_OPEN expression ROUND_CLOSE
   22           | constant
   23           | BOOLEAN
   24           | NUM
   25           | ID

   26 constant: PI
   27         | E


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 16
SUB (259) 17 20
MUL (260) 18
DIV (261) 19
NEWLINE (262) 1 3
ROUND_OPEN (263) 21
ROUND_CLOSE (264) 21
COLON (265) 9
ASSIGNMENT (266) 10
WRITE (267) 11 12
WRITELN (268) 13 14 15
HALT (269) 8
VAR (270) 9
PI (271) 26
E (272) 27
NUM (273) 24
BOOLEAN (274) 23
TYPE (275) 9
ID (276) 9 10 25
STRING (277) 12 14
UMINUS (278)


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
program (25)
    on left: 1 2 3 4, on right: 0 1 3
statement (26)
    on left: 5 6 7 8, on right: 1 2
declaration (27)
    on left: 9, on right: 5
assignment (28)
    on left: 10, on right: 6
write (29)
    on left: 11 12 13 14 15, on right: 7
expression (30)
    on left: 16 17 18 19 20 21 22 23 24 25, on right: 10 11 13 16 17
    18 19 20 21
constant (31)
    on left: 26 27, on right: 22


State 0

    0 $accept: . program $end

    NEWLINE  shift, and go to state 1
    WRITE    shift, and go to state 2
    WRITELN  shift, and go to state 3
    HALT     shift, and go to state 4
    VAR      shift, and go to state 5
    ID       shift, and go to state 6

    $default  reduce using rule 4 (program)

    program      go to state 7
    statement    go to state 8
    declaration  go to state 9
    assignment   go to state 10
    write        go to state 11


State 1

    3 program: NEWLINE . program

    NEWLINE  shift, and go to state 1
    WRITE    shift, and go to state 2
    WRITELN  shift, and go to state 3
    HALT     shift, and go to state 4
    VAR      shift, and go to state 5
    ID       shift, and go to state 6

    $default  reduce using rule 4 (program)

    program      go to state 12
    statement    go to state 8
    declaration  go to state 9
    assignment   go to state 10
    write        go to state 11


State 2

   11 write: WRITE . expression
   12      | WRITE . STRING

    SUB         shift, and go to state 13
    ROUND_OPEN  shift, and go to state 14
    PI          shift, and go to state 15
    E           shift, and go to state 16
    NUM         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    ID          shift, and go to state 19
    STRING      shift, and go to state 20

    expression  go to state 21
    constant    go to state 22


State 3

   13 write: WRITELN . expression
   14      | WRITELN . STRING
   15      | WRITELN .

    SUB         shift, and go to state 13
    ROUND_OPEN  shift, and go to state 14
    PI          shift, and go to state 15
    E           shift, and go to state 16
    NUM         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    ID          shift, and go to state 19
    STRING      shift, and go to state 23

    $default  reduce using rule 15 (write)

    expression  go to state 24
    constant    go to state 22


State 4

    8 statement: HALT .

    $default  reduce using rule 8 (statement)


State 5

    9 declaration: VAR . ID COLON TYPE

    ID  shift, and go to state 25


State 6

   10 assignment: ID . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 26


State 7

    0 $accept: program . $end

    $end  shift, and go to state 27


State 8

    1 program: statement . NEWLINE program
    2        | statement .

    NEWLINE  shift, and go to state 28

    $default  reduce using rule 2 (program)


State 9

    5 statement: declaration .

    $default  reduce using rule 5 (statement)


State 10

    6 statement: assignment .

    $default  reduce using rule 6 (statement)


State 11

    7 statement: write .

    $default  reduce using rule 7 (statement)


State 12

    3 program: NEWLINE program .

    $default  reduce using rule 3 (program)


State 13

   20 expression: SUB . expression

    SUB         shift, and go to state 13
    ROUND_OPEN  shift, and go to state 14
    PI          shift, and go to state 15
    E           shift, and go to state 16
    NUM         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    ID          shift, and go to state 19

    expression  go to state 29
    constant    go to state 22


State 14

   21 expression: ROUND_OPEN . expression ROUND_CLOSE

    SUB         shift, and go to state 13
    ROUND_OPEN  shift, and go to state 14
    PI          shift, and go to state 15
    E           shift, and go to state 16
    NUM         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    ID          shift, and go to state 19

    expression  go to state 30
    constant    go to state 22


State 15

   26 constant: PI .

    $default  reduce using rule 26 (constant)


State 16

   27 constant: E .

    $default  reduce using rule 27 (constant)


State 17

   24 expression: NUM .

    $default  reduce using rule 24 (expression)


State 18

   23 expression: BOOLEAN .

    $default  reduce using rule 23 (expression)


State 19

   25 expression: ID .

    $default  reduce using rule 25 (expression)


State 20

   12 write: WRITE STRING .

    $default  reduce using rule 12 (write)


State 21

   11 write: WRITE expression .
   16 expression: expression . ADD expression
   17           | expression . SUB expression
   18           | expression . MUL expression
   19           | expression . DIV expression

    ADD  shift, and go to state 31
    SUB  shift, and go to state 32
    MUL  shift, and go to state 33
    DIV  shift, and go to state 34

    $default  reduce using rule 11 (write)


State 22

   22 expression: constant .

    $default  reduce using rule 22 (expression)


State 23

   14 write: WRITELN STRING .

    $default  reduce using rule 14 (write)


State 24

   13 write: WRITELN expression .
   16 expression: expression . ADD expression
   17           | expression . SUB expression
   18           | expression . MUL expression
   19           | expression . DIV expression

    ADD  shift, and go to state 31
    SUB  shift, and go to state 32
    MUL  shift, and go to state 33
    DIV  shift, and go to state 34

    $default  reduce using rule 13 (write)


State 25

    9 declaration: VAR ID . COLON TYPE

    COLON  shift, and go to state 35


State 26

   10 assignment: ID ASSIGNMENT . expression

    SUB         shift, and go to state 13
    ROUND_OPEN  shift, and go to state 14
    PI          shift, and go to state 15
    E           shift, and go to state 16
    NUM         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    ID          shift, and go to state 19

    expression  go to state 36
    constant    go to state 22


State 27

    0 $accept: program $end .

    $default  accept


State 28

    1 program: statement NEWLINE . program

    NEWLINE  shift, and go to state 1
    WRITE    shift, and go to state 2
    WRITELN  shift, and go to state 3
    HALT     shift, and go to state 4
    VAR      shift, and go to state 5
    ID       shift, and go to state 6

    $default  reduce using rule 4 (program)

    program      go to state 37
    statement    go to state 8
    declaration  go to state 9
    assignment   go to state 10
    write        go to state 11


State 29

   16 expression: expression . ADD expression
   17           | expression . SUB expression
   18           | expression . MUL expression
   19           | expression . DIV expression
   20           | SUB expression .

    $default  reduce using rule 20 (expression)


State 30

   16 expression: expression . ADD expression
   17           | expression . SUB expression
   18           | expression . MUL expression
   19           | expression . DIV expression
   21           | ROUND_OPEN expression . ROUND_CLOSE

    ADD          shift, and go to state 31
    SUB          shift, and go to state 32
    MUL          shift, and go to state 33
    DIV          shift, and go to state 34
    ROUND_CLOSE  shift, and go to state 38


State 31

   16 expression: expression ADD . expression

    SUB         shift, and go to state 13
    ROUND_OPEN  shift, and go to state 14
    PI          shift, and go to state 15
    E           shift, and go to state 16
    NUM         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    ID          shift, and go to state 19

    expression  go to state 39
    constant    go to state 22


State 32

   17 expression: expression SUB . expression

    SUB         shift, and go to state 13
    ROUND_OPEN  shift, and go to state 14
    PI          shift, and go to state 15
    E           shift, and go to state 16
    NUM         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    ID          shift, and go to state 19

    expression  go to state 40
    constant    go to state 22


State 33

   18 expression: expression MUL . expression

    SUB         shift, and go to state 13
    ROUND_OPEN  shift, and go to state 14
    PI          shift, and go to state 15
    E           shift, and go to state 16
    NUM         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    ID          shift, and go to state 19

    expression  go to state 41
    constant    go to state 22


State 34

   19 expression: expression DIV . expression

    SUB         shift, and go to state 13
    ROUND_OPEN  shift, and go to state 14
    PI          shift, and go to state 15
    E           shift, and go to state 16
    NUM         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    ID          shift, and go to state 19

    expression  go to state 42
    constant    go to state 22


State 35

    9 declaration: VAR ID COLON . TYPE

    TYPE  shift, and go to state 43


State 36

   10 assignment: ID ASSIGNMENT expression .
   16 expression: expression . ADD expression
   17           | expression . SUB expression
   18           | expression . MUL expression
   19           | expression . DIV expression

    ADD  shift, and go to state 31
    SUB  shift, and go to state 32
    MUL  shift, and go to state 33
    DIV  shift, and go to state 34

    $default  reduce using rule 10 (assignment)


State 37

    1 program: statement NEWLINE program .

    $default  reduce using rule 1 (program)


State 38

   21 expression: ROUND_OPEN expression ROUND_CLOSE .

    $default  reduce using rule 21 (expression)


State 39

   16 expression: expression . ADD expression
   16           | expression ADD expression .
   17           | expression . SUB expression
   18           | expression . MUL expression
   19           | expression . DIV expression

    MUL  shift, and go to state 33
    DIV  shift, and go to state 34

    $default  reduce using rule 16 (expression)


State 40

   16 expression: expression . ADD expression
   17           | expression . SUB expression
   17           | expression SUB expression .
   18           | expression . MUL expression
   19           | expression . DIV expression

    MUL  shift, and go to state 33
    DIV  shift, and go to state 34

    $default  reduce using rule 17 (expression)


State 41

   16 expression: expression . ADD expression
   17           | expression . SUB expression
   18           | expression . MUL expression
   18           | expression MUL expression .
   19           | expression . DIV expression

    $default  reduce using rule 18 (expression)


State 42

   16 expression: expression . ADD expression
   17           | expression . SUB expression
   18           | expression . MUL expression
   19           | expression . DIV expression
   19           | expression DIV expression .

    $default  reduce using rule 19 (expression)


State 43

    9 declaration: VAR ID COLON TYPE .

    $default  reduce using rule 9 (declaration)
